# src/routes/game-player.routes.js
@@ -5,5 +5,6 @@ const authMiddleware = require('../middlewares/auth.middleware');
 
 router.post('/games/:gameId/players', authMiddleware, gamePlayerController.addGamePlayer);
 router.delete('/games/:gameId/players', authMiddleware, gamePlayerController.removeGamePlayer);
+router.get('/games/:gameId/players', gamePlayerController.getPlayersInGame);
 
 module.exports = router;
