# src/routes/game.routes.js
@@ -9,6 +9,7 @@ router.get('/games/:id', gameController.getGameById);
 router.post('/games', authMiddleware, structureMiddleware(gameSchema), gameController.addGame);
 router.put('/games/:id', authMiddleware, structureMiddleware(gameSchema), gameController.updateGame);
 router.put('/games/:id/start', authMiddleware, gameController.startGame);
+router.put('/games/:id/end', authMiddleware, gameController.finishGame)
 router.delete('/games/:id', authMiddleware, gameController.deleteGame);
 
 module.exports = router;
